[Update 2018-07-23]
- Added n_tok for magical damage against a certain element (350-359) [Loa]
- Minor fix to asura damage [Loa]
- Added IDs for Nightmare Pyramid cards [Loa]
- Added back INT + 3 to Divine Cross and Dark Thorn Staff [Loa]
- Fixed Nightmare Verit Card [Loa]
- Fixed issues with El Dicastes enchants [Loa]
	Light of El Dicastes 2nd enchant slot now has DEX instead of VIT
	Fix FLEE enchants
	Fixed Golden Trickle enchants
	Corrected some labeling

[Update 2018-07-19]
- Fixed PVP page can't decompress saved data [NattWara]

[Update 2018-07-17]
- Added Nightmare Cards and Combos; [Kato]

[Update 2018-07-17]
- Fixed Bowling Bash damage when used with a Bow [NattWara]

[Update 2018-07-15]
- Add DEFLATE/INFLATE for string compression/decompression [NattWara]
- Add data compressor/decompressor, deflate.html [NattWara]
- Fix Wizard/High Wizard only equipment available for soul linker (Ex: Staff of Magi) [NattWara]

[Update 2018-07-14]
- URL Saving for Eden/Biolab/El Dicaste/Mora enchants [NattWara]
- Fix Eden Hat enchant [NattWara]

[Update 2018-07-13]
- Added Army Padding [NattWara]
- Added Pendant of Guardian [NattWara]
- Added Holy Kurobuku [NattWara]
- Added Love Guard [NattWara]
- Added Tear Drop [NattWara]

[Update 2018-07-12]
- Added Eden Enchants [NattWara]
- Added El Dicaste Enchants [NattWara]
- Added Mora Enchants [NattWara]

[Update 2018-07-10]
- Added Biolab Enchants [NattWara]

[Update 2018-07-09]
- Added Ancient Gold Adornment [NattWara]
- Issue #238: Added vanilla mode [Loa]
	Main functions at bottom of head.js
	Vanilla mode saving is not implemented

[Update 2018-07-04]
- Completed cardID array for linking [Loa]
- Added linking for card sets [Loa]
- Temporarily removed PVP gears until PVP update [Loa]
	IDs 958-984
- Added a thing for Beer Hat recuperative skills in Extended Info [Loa]
- Removed items [Loa]:
	Frist Hat
	Frist Sword
	Frist Hat + Sword
	Frist Sword + Odin's Blessing
	Ice Hat
	Eddga Hat
	Red Beret
	Hukke's Blackcat Ears